<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_keyboard_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/largeMargin"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/create_account"
        android:textColor="#14304A"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:lines="2"
        android:text="Fill your information below or register \n with your social account"
        android:textColor="#C4C4C4"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTV" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mediumMargin"
        android:layout_marginEnd="@dimen/mediumMargin"
        android:hint="Name"
        app:boxStrokeColor="#CFCFCF"
        app:boxStrokeWidth="1dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoTV"
        app:shapeAppearanceOverlay="@style/Large_radius">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="Your name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthdayTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mediumMargin"
        android:layout_marginTop="@dimen/medium2Margin"
        android:layout_marginEnd="@dimen/mediumMargin"
        android:hint="Birthday"
        app:boxStrokeColor="#CFCFCF"
        app:boxStrokeWidth="1dp"
        app:endIconDrawable="@drawable/icon_calendar"
        app:endIconMode="custom"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTIL"
        app:shapeAppearanceOverlay="@style/Large_radius">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="MM/DD/YYYY" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mediumMargin"
        android:layout_marginTop="@dimen/medium2Margin"
        android:layout_marginEnd="@dimen/mediumMargin"
        android:hint="Address"
        app:boxStrokeColor="#CFCFCF"
        app:boxStrokeWidth="1dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthdayTIL"
        app:shapeAppearanceOverlay="@style/Large_radius">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="Enter your location" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mediumMargin"
        android:layout_marginTop="@dimen/medium2Margin"
        android:layout_marginEnd="@dimen/mediumMargin"
        android:hint="Phone No."
        app:boxStrokeColor="#CFCFCF"
        app:boxStrokeWidth="1dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressTIL"
        app:shapeAppearanceOverlay="@style/Large_radius">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="+1 v" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="@dimen/mediumMargin"
        android:layout_marginTop="@dimen/medium2Margin"
        android:layout_marginEnd="@dimen/mediumMargin"
        android:backgroundTint="#41C485"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/next"
        android:textSize="15sp"
        app:cornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTIL" />

    <LinearLayout
        android:id="@+id/orSignInLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium2Margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/socialLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nextBtn"
        app:layout_constraintVertical_chainStyle="packed">

        <View
            android:id="@+id/view1"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/orSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/or_sign_in_with" />

        <View
            android:id="@+id/view2"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/socialLL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orSignInLL">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabApple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/apple_icon"
            android:src="@drawable/apple"
            app:layout_constraintEnd_toStartOf="@id/fabGoogle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/fabGoogle"
            app:shapeAppearanceOverlay="@style/FabShapeStyle"
            app:tint="@null" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/mediumMargin"
            android:layout_marginEnd="@dimen/mediumMargin"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/google"
            android:src="@drawable/ic_google"
            app:layout_constraintBottom_toTopOf="@id/haveAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orSignIn"
            app:layout_constraintVertical_chainStyle="packed"
            app:shapeAppearanceOverlay="@style/FabShapeStyle"
            app:tint="@null" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFacebooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/facebook"
            android:src="@drawable/ic_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fabGoogle"
            app:layout_constraintTop_toTopOf="@id/fabGoogle"
            app:shapeAppearanceOverlay="@style/FabShapeStyle"
            app:tint="@null"
            tools:layout_editor_absoluteX="275dp"
            tools:layout_editor_absoluteY="528dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>